updated styling and added raw data feature
